feat: SignIn API
